1. added bootstrap 2. added home page 3. added ui-router

--- a/public/index.html
+++ b/public/index.html
@@ -1,18 +1,17 @@
 <html>
 <head>
 	<title>Insight</title>
+	<link rel="stylesheet" type="text/css" href="assets/bootstrap/css/bootstrap.min.css">
+	<script type="text/javascript" src="assets/jquery-1.11.3.min.js"></script>
+	<script type="text/javascript"  src="assets/bootstrap/js/bootstrap.min.js"></script>
+
+
 	<script type="text/javascript" src="bundle.js"></script>
 </head>
 <body>
 
 	<div ng-app="mainModule">
-
-
-
-		<a ui-sref="state1">State 1</a>
-    	<a ui-sref="state2">State 2</a>
 		<div ui-view></div>
-	
 	</div>
 
 </body>
