--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
 	<title>Insight</title>
+	<link rel="stylesheet" type="text/css" href="assets/css/home.css">
 	<link rel="stylesheet" type="text/css" href="assets/bootstrap/css/bootstrap.min.css">
 	<script type="text/javascript" src="assets/jquery-1.11.3.min.js"></script>
 	<script type="text/javascript"  src="assets/bootstrap/js/bootstrap.min.js"></script>
